# MelodyKit

./: .gitignore  README.md  dev-app-update.yml  electron-builder.yml  electron.vite.config.mjs  package-lock.json  package.json
.github/: copilot-instructions.md
Backend/: CMakeLists.txt  README.md
Backend/src/: BackendHost.cpp  BackendHost.cpp.backup  BackendHost.h  Main.cpp
resources/: .gitignore
resources/Strings/: Violin_Express.sf2
src/main/: index.js
src/preload/: index.js
src/renderer/: index.html
src/renderer/src/: App.jsx
src/renderer/src/assets/: base.css
src/renderer/src/components/: AutomationLane.jsx  InstrumentSelector.jsx  Metronome.jsx  PianoRoll.jsx  SequencerPanel.jsx  Sidebar.jsx  TitleBar.jsx  TrackTimeline.jsx  VSTSelector.jsx
src/renderer/src/utils/: audioContext.js  exportWav.js  fastWav.js  soundfontPlayer.js  spessaSf2.js  spessaWorker.js  vstBackend.js  wavEncoder.js
src/renderer/src/workers/: pianoRollWorker.js  playbackScheduler.js
